Fixed the pathing error in server.ts (compiled server.js) files

--- a/views/default.pug
+++ b/views/default.pug
@@ -4,6 +4,8 @@ html
         title #{title}
         link(rel='stylesheet', href='/css/style.css')
         meta(name="viewport" content="width=device-width, initial-scale=1")
+        script(type="text/javascript", src="./js/Chart.bundle.min.js")
+        script(type="text/javascript", src="./js/kloakchart.js")
         
         
     body
