--- a/views/index.pug
+++ b/views/index.pug
@@ -3,8 +3,11 @@ extend default
 block content
 
     h1 #{text}
-
+    
+    img(src="./images/512.png")
 
     canvas(id="KloakUserChartbrowser" width="800" height="450")
     script(type="text/javascript", src="./js/Chart.bundle.min.js")
     script(type="text/javascript", src="./js/kloakchart.js")
+    
+    
